// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/item-details/SharedLinkExpirationNotice should accept node as expiration 1`] = `
<InlineNotice>
  <FormattedMessage
    defaultMessage="This shared link will be disabled on {expiration}."
    id="boxui.itemDetails.sharedLinkExpiration"
    values={
      Object {
        "expiration": <FormattedDate
          value="1517533810845"
        />,
      }
    }
  />
</InlineNotice>
`;

exports[`features/item-details/SharedLinkExpirationNotice should render default component 1`] = `
<InlineNotice>
  <FormattedMessage
    defaultMessage="This shared link will be disabled on {expiration}."
    id="boxui.itemDetails.sharedLinkExpiration"
    values={
      Object {
        "expiration": "May 27, 2018",
      }
    }
  />
</InlineNotice>
`;
